<resources>
    <string name="app_name">GiftMyWishClone</string>
    <string name="sing_up">Sing Up</string>
    <string name="with_your_social_networks">With your social networks</string>
    <string name="gmail">Gmail</string>
    <string name="facebook">Facebook</string>
    <string name="or_log_in">Or Log in</string>
    <string name="terms">By tapping Sing In, you agree with \nour Terms of Service and Privacy Policy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Didn\'t have an account? Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="a_confirmation_code"> A confirmation code was sent to your email %s</string>
    <string name="code">Code</string>
    <string name="btnRegister">Register</string>
    <string name="my_friends_events">Friend\'s Events</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="my_events">My Events</string>
    <string name="events">Events</string>
    <string name="status">Status</string>
    <string name="days_left">100 days left</string>
    <string name="integer">10</string>
    <string name="my_wish">My wish</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_to_my_profile">Welcome to my profile!</string>
    <string name="first_and_last_name">%s %s</string>
    <string name="donates_empty">Will be displayed when you get at least one donate</string>
    <string name="likes_format">%d Likes.</string>
    <string name="comments_format">%d Comments</string>
    <string name="expiry_format">Expiry: %s</string>
    <string name="funded_format">%d&#x0025; Funded</string>
    <string name="total_funded_format">$%d / $%d</string>
    <string name="title_activity_image_full_size">ImageFullSizeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>