<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.janedales.giftmywishclone.ui.views.CollapsedHintTextInputLayout
            android:id="@+id/tilUserName"
            android:visibility="visible"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/username"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:singleLine="true" />
        </com.janedales.giftmywishclone.ui.views.CollapsedHintTextInputLayout>

        <com.janedales.giftmywishclone.ui.views.CollapsedHintTextInputLayout
            android:id="@+id/tilPassword"
            android:visibility="visible"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                android:singleLine="true"/>
        </com.janedales.giftmywishclone.ui.views.CollapsedHintTextInputLayout>
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/forgot_password"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_dark"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/purple_dark"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingBottom="16dp"
            />
        <Space
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTint="@color/purple_dark"/>
</FrameLayout>