<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        android:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/gray_light"
                android:layout_margin="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
            <TextView
                android:id="@+id/tvDaysLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/days_left"
                android:textColor="@color/black"
                android:paddingHorizontal="8dp"
                android:background="@drawable/bg_round_left"
                android:backgroundTint="@color/gray_light"
                app:layout_constraintTop_toTopOf="@id/ivCover"
                app:layout_constraintRight_toRightOf="@id/ivCover" />
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginVertical="16dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@id/ivCover"
                app:layout_constraintLeft_toLeftOf="@id/ivCover"
                app:layout_constraintRight_toRightOf="@id/ivCover" />
            <View
                android:id="@+id/lineVertical"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/gray_light"
                app:layout_constraintTop_toTopOf="@id/line"
                app:layout_constraintBottom_toBottomOf="@id/line"
                app:layout_constraintLeft_toLeftOf="@id/line"
                app:layout_constraintRight_toRightOf="@id/line" />
            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:text="@string/username"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@id/line"
                app:layout_constraintLeft_toLeftOf="@id/line"
                app:layout_constraintRight_toLeftOf="@id/lineVertical"
                app:layout_constraintTop_toTopOf="@id/line" />
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:text="@string/my_wish"
                android:gravity="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/line"
                app:layout_constraintLeft_toRightOf="@id/lineVertical"
                app:layout_constraintRight_toRightOf="@id/line"
                app:layout_constraintTop_toTopOf="@+id/line" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>