<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_events.MyEventsFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/gray_light"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <ImageView
                    android:id="@+id/imageUserBack"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/ivUser"
                    app:layout_constraintBottom_toBottomOf="@id/ivUser"
                    app:layout_constraintRight_toRightOf="@id/ivUser"
                    app:layout_constraintLeft_toLeftOf="@id/ivUser"
                    />
                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@color/gray_light"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="55dp"
                    app:layout_constraintTop_toBottomOf="@id/ivCover"
                    app:layout_constraintBottom_toBottomOf="@id/ivCover"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="16sp"
                    android:layout_marginLeft="32dp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/ivUser"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/status"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    app:layout_constraintLeft_toLeftOf="@id/tvName"
                    />
                <TextView
                    android:id="@+id/tvNumberOfFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/integer"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tvStatus"
                    app:layout_constraintLeft_toLeftOf="@id/tvStatus"
                    />
                <TextView
                    android:id="@+id/tvFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/tvNumberOfFriends"
                    app:layout_constraintLeft_toRightOf="@id/tvNumberOfFriends"
                    />
                <TextView
                    android:id="@+id/tvNumberOfEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/integer"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/tvNumberOfFriends"
                    app:layout_constraintLeft_toRightOf="@id/tvFriends"
                    />
                <TextView
                    android:id="@+id/tvEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/tvNumberOfFriends"
                    app:layout_constraintLeft_toRightOf="@id/tvNumberOfEvents"
                    />
                <ImageView
                    android:id="@+id/ivPencil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pencil"
                    android:layout_marginRight="16dp"
                    app:layout_constraintTop_toTopOf="@id/tvStatus"
                    app:layout_constraintBottom_toBottomOf="@id/tvStatus"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    tools:listitem="@layout/item_my_events"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNumberOfEvents"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>