<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user_profile.UserProfileFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_left_arrow"
                    app:tint="@color/white"
                    />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_warning"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    app:tint="@color/white"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivTitle"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/gray_light"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <ImageView
                    android:id="@+id/imageUserBack"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="@id/ivUser"
                    app:layout_constraintBottom_toBottomOf="@id/ivUser"
                    app:layout_constraintRight_toRightOf="@id/ivUser"
                    app:layout_constraintLeft_toLeftOf="@id/ivUser"
                    />
                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@color/gray_light"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="55dp"
                    app:layout_constraintTop_toBottomOf="@id/ivTitle"
                    app:layout_constraintBottom_toBottomOf="@id/ivTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />
                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Message"
                    android:textSize="12sp"
                    android:textColor="@color/teal_700"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="8dp"
                    android:background="@drawable/bg_round_2"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/ivUser"
                    app:layout_constraintRight_toLeftOf="@id/btnPlus"
                    />
                <ImageView
                    android:id="@+id/btnPlus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="4dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/gray_light"
                    android:src="@drawable/ic_minus_circle"
                    app:tint="@color/teal_700"
                    app:layout_constraintBottom_toBottomOf="@id/ivUser"
                    app:layout_constraintRight_toRightOf="parent"
                    />
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/username"
                    android:textSize="16sp"
                    android:layout_marginLeft="32dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivUser"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
                <TextView
                    android:id="@+id/tvNumberOfFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@string/integer"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    app:layout_constraintLeft_toLeftOf="@id/tvName"
                    />
                <TextView
                    android:id="@+id/tvFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/tvNumberOfFriends"
                    app:layout_constraintLeft_toRightOf="@id/tvNumberOfFriends"
                    />
                <TextView
                    android:id="@+id/tvNumberOfEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/integer"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/tvNumberOfFriends"
                    app:layout_constraintLeft_toRightOf="@id/tvFriends"
                    />
                <TextView
                    android:id="@+id/tvEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintTop_toTopOf="@id/tvNumberOfFriends"
                    app:layout_constraintLeft_toRightOf="@id/tvNumberOfEvents"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    tools:listitem="@layout/item_user_profile"
                    android:layout_margin="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNumberOfEvents"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
